Move serialization back into models module